--- a/.drone.yml
+++ b/.drone.yml
@@ -10,67 +10,28 @@ clone:
 
 steps:
 
-- name: decrypt and untar - managing secret solution files
+- name: process main
+  image: python:3.10.4
+  commands:
+  - cd ${DRONE_BRANCH}
+  - python main.py > output.txt
+
+- name: decrypt - managing secret solution files
   # cp. https://hub.docker.com/r/frapsoft/openssl
   image: frapsoft/openssl
   environment:
     KEY:
       from_secret: key
   commands:
-  - openssl enc -d -aes-256-cbc -md sha256 -pass env:KEY -in ./${DRONE_BRANCH}/src.tar.enc -out ./${DRONE_BRANCH}/src.tar
-  - tar -xvf ./${DRONE_BRANCH}/src.tar
+  - openssl enc -d -aes-256-cbc -md sha256 -pass env:KEY -in ./${DRONE_BRANCH}/solution.py.enc -out ./${DRONE_BRANCH}/solution.py
 
 
-- name: build all docker images needed
-  image: docker
-  volumes:
-  - name: dockersock
-    path: /var/run/docker.sock
+- name: check if main is correct
+  image: python:3.10.4
   commands:
-  - docker --version && cd ${DRONE_BRANCH}
-  - docker --version && cd ../src
-  - docker build --quiet -t ${DRONE_BRANCH}.check -f Dockerfile.python.df .
-  - rm -rf ../src
-  - rm -f ./src.tar
-  - cd ../${DRONE_BRANCH}
-  - docker build --quiet -t ${DRONE_BRANCH}.main -f Dockerfile.main.df .
-
-- name: server.local
-  image: ${DRONE_BRANCH}.main
-    # Note: If an image name is not correct, the Drone runner tries to load it
-    #       from Docker Hub. This will most probably lead to various errors.
-    #       So, better use 'pull: never' instead of 'pull: if-not-exists'.
-  pull: never
-  detach: true
-  commands:
-  - service nginx start
-  - service ssh start
-    # Note: The ssh daemon needs to be started manually since Drone seems to
-    #       start containers as if with '-it' and '/bin/bash' command was used
-  - /bin/bash -c 'while true ; do echo "$(service nginx status), $(service ssh status) on $(hostname -I)" ; sleep 1 ; done'
-    # Note: The '-c' option is needed for bash to interpret the passed
-    #       arguments as bash commands.
-
-- name: decrypt again
-  image: frapsoft/openssl
-  environment:
-    KEY:
-      from_secret: key
-  commands:
-  - openssl enc -d -aes-256-cbc -md sha256 -pass env:KEY -in ./${DRONE_BRANCH}/src.tar.enc -out ./${DRONE_BRANCH}/src.tar
-  - tar -xvf ./${DRONE_BRANCH}/src.tar
-
-- name: check if main worked as expected
-  image: ${DRONE_BRANCH}.check
-  pull: never
-  commands:
-  - cd src
-  - python check.py
-
-volumes:
-- name: dockersock
-  host:
-    path: /var/run/docker.sock
+  - cd ${DRONE_BRANCH}
+  - python solution.py > expected_result.txt
+  - diff -s -q output.txt expected_result.txt
 
 trigger:
   branch:
