new exercise added (feature162)

--- a/.drone.yml
+++ b/.drone.yml
@@ -9,7 +9,8 @@ clone:
 
 
 steps:
-- name: decrypt - managing secret solution files
+
+- name: decrypt and untar - managing secret solution files
   # cp. https://hub.docker.com/r/frapsoft/openssl
   image: frapsoft/openssl
   environment:
@@ -27,35 +28,76 @@ steps:
     path: /var/run/docker.sock
   commands:
   - docker --version && cd ${DRONE_BRANCH}
-  - docker build --quiet -t ${DRONE_BRANCH}python.main -f ../src/Dockerfile.python.df .
   - docker --version && cd ../src
-  - docker build --quiet -t ${DRONE_BRANCH}ubuntu.sshd -f Dockerfile.ubuntu.sshd.df .
-  - docker build --quiet -t ${DRONE_BRANCH}python.solution -f Dockerfile.python.df .
-  - cd ..
-  - rm -rf src
-  - rm -f src.tar
+  - cp ../feature162/shardul.kulkarni.public_key.pub .
+  - docker build --quiet -t ${DRONE_BRANCH}.check -f Dockerfile.python.df .
+  - docker build --quiet -t ${DRONE_BRANCH}.master -f Dockerfile.ubuntu.ansible.sshd.df .
+  - docker build --quiet -t ${DRONE_BRANCH}.node -f Dockerfile.ubuntu.ansible-client.sshd.df .
+  - rm -rf ../src
+  - rm -f ./src.tar
 
-- name: server.local
-  image: ${DRONE_BRANCH}ubuntu.sshd
+- name: node1.local
+  image: ${DRONE_BRANCH}.node
+    # Note: If an image name is not correct, the Drone runner tries to load it
+    #       from Docker Hub. This will most probably lead to various errors.
+    #       So, better use 'pull: never' instead of 'pull: if-not-exists'.
   pull: never
   detach: true
   commands:
   - service ssh start
     # Note: The ssh daemon needs to be started manually since Drone seems to
     #       start containers as if with '-it' and '/bin/bash' command was used
-  - /bin/bash -c 'while true ; do who -a ; echo "$(service ssh status) on $(hostname -I)" ; sleep 1 ; done'
+  - /bin/bash -c 'while true ; do echo "$(find /var/log/nginx -name *.log | xargs cat)" "$(ansible --version | sed -n 1p) $(service ssh status) on $(hostname -I)" ; sleep 1 ; done'
+    # Note: The '-c' option is needed for bash to interpret the passed
+    #       arguments as bash commands.
+    # Note: Echoing nginx logs seems to be necessary for proper *weighted*
+    #       nginx load balancing.
+
+- name: node2.local
+  image: ${DRONE_BRANCH}.node
+    # Note: If an image name is not correct, the Drone runner tries to load it
+    #       from Docker Hub. This will most probably lead to various errors.
+    #       So, better use 'pull: never' instead of 'pull: if-not-exists'.
+  pull: never
+  detach: true
+  commands:
+  - service ssh start
+    # Note: The ssh daemon needs to be started manually since Drone seems to
+    #       start containers as if with '-it' and '/bin/bash' command was used
+  - /bin/bash -c 'while true ; do echo "$(ansible --version | sed -n 1p) $(service ssh status) on $(hostname -I)" ; sleep 1 ; done'
     # Note: The '-c' option is needed for bash to interpret the passed
     #       arguments as bash commands.
 
-- name: run main and generate result
-  image: ${DRONE_BRANCH}python.main
+- name: node3.local
+  image: ${DRONE_BRANCH}.node
+    # Note: If an image name is not correct, the Drone runner tries to load it
+    #       from Docker Hub. This will most probably lead to various errors.
+    #       So, better use 'pull: never' instead of 'pull: if-not-exists'.
+  pull: never
+  detach: true
+  commands:
+  - service ssh start
+    # Note: The ssh daemon needs to be started manually since Drone seems to
+    #       start containers as if with '-it' and '/bin/bash' command was used
+  - /bin/bash -c 'while true ; do echo "$(service ssh status) on $(hostname -I)" ; sleep 1 ; done'
+    # Note: The '-c' option is needed for bash to interpret the passed
+    #       arguments as bash commands.
+
+- name: master.local
+  image: ${DRONE_BRANCH}.master
   pull: never
   commands:
+    # Note: The ssh daemon needs to be started manually since Drone seems to
+    #       start containers as if '-it' and '/bin/bash' command were used
   - cd ${DRONE_BRANCH}
-  - python main.py
+  - cp shardul.kulkarni.private_key.pem /root/.ssh/id_rsa
+  - chmod 600 /root/.ssh/id_rsa
+    # wait for nodes
+  - ansible-playbook -i inventory wait.playbook
+    # invoke playbook
+  - ansible-playbook -i inventory playbook
 
 - name: decrypt again
-  # cp. https://hub.docker.com/r/frapsoft/openssl
   image: frapsoft/openssl
   environment:
     KEY:
@@ -64,18 +106,13 @@ steps:
   - openssl enc -d -aes-256-cbc -md sha256 -pass env:KEY -in ./${DRONE_BRANCH}/src.tar.enc -out ./${DRONE_BRANCH}/src.tar
   - tar -xvf ./${DRONE_BRANCH}/src.tar
 
-
-
-
 - name: check if main worked as expected
-  image: ${DRONE_BRANCH}python.solution
+  image: ${DRONE_BRANCH}.check
   pull: never
   commands:
   - cd src
-  - cp ../${DRONE_BRANCH}/private_key.pem .
-    # Note: To be able to access the private key it has to
-    # be copied to this folder
-  - python solution.py --check
+  - python check.py
+  - sleep 2
 
 volumes:
 - name: dockersock
